# rust-io

./: Cargo.toml  README.md  build.rs
.cargo/: config
benches/: simd_benchmark.rs
src/: lib.rs  main.rs  simd.s
