[package]
name = "rust-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "simd_benchmark"
harness = false

[profile.release]
opt-level = 3